fixed landing page text z-index
p5.js sketch no longer draws on top

--- a/main.css
+++ b/main.css
@@ -66,6 +66,8 @@ body{
 }
 
 #home-text{
+	position: relative;
+	z-index: 1;
 	margin-top: 40%;
 	text-align: center;
 }
